objects/L2I_Trigger_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Settings to manage execution of triggers per user or profile. This is very useful as a kill-switch to disable execution of a trigger during data migration</description>
    <fields>
        <fullName>Disable_AircraftServiceAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable AircraftServiceAction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_AircraftService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable AircraftService</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Aircraft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Aircraft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_ContentVersion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable ContentVersion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_DSH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable DSH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_DSL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable DSL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_InstallLoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable InstallLoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_InvoiceLine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable InvoiceLine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to disable the execution of trigger associated with the Opportunity object.</description>
        <label>Disable Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_OrderItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to disable the execution of trigger associated with the OrderItem (Order Product) object.</description>
        <label>Disable OrderItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to disable the execution of trigger associated with the Order object.</description>
        <label>Disable Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_PLSalesOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to disable the execution of trigger associated with the P&amp;L Sales Opportunity object.</description>
        <label>Disable PLSalesOpportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_PMO_Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable PMO Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_PriceListEntry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable PriceListEntry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_QuoteLine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable QuoteLine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Quote</label>
        <type>Checkbox</type>
    </fields>
    <label>L2I Trigger Settings</label>
</CustomObject>